code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_58.wast
(assert_invalid
  (module (func $type-value-unreached-select-f32-f64 (result f32)
    (block (result f64) (select (unreachable) (unreachable) (unreachable)))
  ))
  "type mismatch"
)